--- a/index.html
+++ b/index.html
@@ -2,23 +2,38 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>freesegs</title>
+  <title>Loading...</title>
   <style>
     body {
-      margin: 0;
-      height: 100vh;
+      background: black;
+      color: white;
       display: flex;
       align-items: center;
       justify-content: center;
-      background: black;
-      color: white;
-      font-size: 64px;
+      height: 100vh;
       font-family: Arial, sans-serif;
-      font-weight: bold;
+      text-align: center;
+    }
+    button {
+      padding: 15px 25px;
+      font-size: 18px;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
-  freesegs
+
+<div>
+  <h1>Click to continue</h1>
+  <button onclick="rickroll()">Continue</button>
+</div>
+
+<script>
+  function rickroll() {
+    window.location.href = "https://www.youtube.com/watch?v=dQw4w9WgXcQ";
+  }
+</script>
+
 </body>
 </html>
+
