--- a/index.html
+++ b/index.html
@@ -2,38 +2,35 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Loading...</title>
+  <title>freesegs</title>
   <style>
+    * {
+      margin: 0;
+      padding: 0;
+    }
     body {
-      background: black;
-      color: white;
+      height: 100vh;
       display: flex;
       align-items: center;
       justify-content: center;
-      height: 100vh;
-      font-family: Arial, sans-serif;
-      text-align: center;
-    }
-    button {
-      padding: 15px 25px;
-      font-size: 18px;
+      background: #000;
+      color: #fff;
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 72px;
+      font-weight: bold;
       cursor: pointer;
+      user-select: none;
     }
   </style>
 </head>
-<body>
+<body onclick="go()">
+  freesegs
 
-<div>
-  <h1>Click to continue</h1>
-  <button onclick="rickroll()">Continue</button>
-</div>
-
-<script>
-  function rickroll() {
-    window.location.href = "https://www.youtube.com/watch?v=dQw4w9WgXcQ";
-  }
-</script>
-
+  <script>
+    function go() {
+      window.location.href = "https://www.youtube.com/watch?v=dQw4w9WgXcQ";
+    }
+  </script>
 </body>
 </html>
 
