--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -11,25 +11,39 @@
     body {
       height: 100vh;
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
       background: #000;
       color: #fff;
       font-family: Arial, Helvetica, sans-serif;
-      font-size: 72px;
-      font-weight: bold;
       cursor: pointer;
       user-select: none;
+    }
+    .main {
+      font-size: 72px;
+      font-weight: bold;
+    }
+    .sub {
+      margin-top: 12px;
+      font-size: 16px;
+      opacity: 0.6;
+      letter-spacing: 1px;
     }
   </style>
 </head>
 <body onclick="go()">
-  freesegs
+
+  <div class="main">freesegs</div>
+  <div class="sub">click anywhere</div>
 
   <script>
     function go() {
       window.location.href = "https://www.youtube.com/watch?v=dQw4w9WgXcQ";
     }
   </script>
+
 </body>
 </html>
+
+
